--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
     <div class="thumbnail"> <a href="temple.html"><img src="assets/images/J&H.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Jeffery &amp; Hamlet - Temple Explorers</h4>
+      <h4>Jeffery &amp; Hamlet - Temple Explorers<i>April 2019</i></h4>
       <p class="tag">Gamemaker 2</p>
       <p class="text_column">A local Cooperative Game where 2 players must work together to collect diamonds.</p>
       <p class="text_footer"><a href="temple.html">Play the game</a></p>
