Finished temple description

--- a/temple.html
+++ b/temple.html
@@ -90,7 +90,7 @@
             }
             h2 {
                 font-family: 'Sarabun', sans-serif;
-                font-size: 40px;
+                font-size: 35px;
                 padding: 0px;
                 margin-top: 10px;
             }
@@ -101,7 +101,7 @@
             }
             #content {
                 text-align: left;
-                font-size: 30px;
+                font-size: 25px;
                 font-family: 'Thasadith', sans-serif;
 	            padding-bottom: 55px;
             }
@@ -122,11 +122,28 @@
         <script>window.onload = GameMaker_Init;</script>
         
         <div id="site">
-            <h1>About the Game</h1>
+            <h1>About the Game.</h1>
             <div class="menu"></div>
             <div id="content">
                 <h2>How to Play</h2>
-                <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
+                <p>Jeffer &amp; Hamlet - <i>Temple Explorers</i> is a two player cooperative game.</p>
+                <ul>
+                	<li>Player one uses arrow keys.</li>
+                	<li>Player two uses WASD.</li>
+                </ul>
+                <h2>Objective</h2>
+                <p>The objective of the game is to work together and collect all 9 gems before time runs out. The trick is that some gems are surrounded by mud, which the pig walks faster in, while others are in narrow places, where only the human can fit. The players must also avoid the skeletons haunting the temple: one touch and it's game over!</p>
+                <h2>History</h2>
+                <p>Jeffery &amp; Hamlet is a project I made in my Junior year Video Game Development class. The assignement was to create a cooperative game with the following restrictions:</p>
+                <ol>
+                	<li>A game that encourages working together</li>
+                	<li>Should envolve collecting resources or one player's actions enabling another's</li>
+                	<li>Level should have a 1 minute timer</li>
+                	<li>Only a week of classtime to complete (although a little lenient)</li>
+                </ol>
+                <h2>Reflection</h2>
+                <p>Since I only had a week to complete the game, there was a lot I would have imporved given more time. First, I would probably fix the hit-boxes on the players to be able to collect gems and realistically collide with walls at the same time. Right now the hit-box only covers the lower torso to make the wall collision more accurate, unfortunately sacraficing easy collecting of gems. Additionaly, I would have fixed the orthographic 3D effect of the background to make it more realstic. The wall collision is pretty primative and unrealstic to how a 3D enviroment should react. Finally I would have added more substance. The game currently is uninteresting and short. If given a few more weeks I would have made more levels, additional mechanics (like keys and traps), and probably a health bar and items.</p>
+                <p>Regardless of the tight restrictions, I learned a lot about Gamemaker and game development. I also had a lot of fun and ended up with a game that I can impress my friends with.</p>
             </div>
             
         </div>
