best course update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul id="menu_container">
             <li class="menu_item"><a href="">Gallery</a></li>
             <li class="menu_item"><a href="Creative.html">Most Creative</a></li>
-            <li class="menu_item"><a href="Best%20Cources/Best.html">Best Courses</a></li>
+            <li class="menu_item"><a href="Best.html">Best Courses</a></li>
             <li class="menu_item"><a href="https://github.com/xxzbuckxx">Github</a></li>
         </ul>
     </div>
@@ -46,6 +46,12 @@
   </script>
   <!-- Stats Gallery Section -->
   <div class="gallery">
+    <div class="thumbnail"> <a href="http://philome.la/TraczykZack/the-bone-factory"><img src="assets/images/bonefactory.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Bone Factory<i>July 2014</i></h4>
+      <p class="tag"><a href="http://twinery.org/">Twine</a></p>
+      <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
+      <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
+    </div>
     <div class="thumbnail"> <a href="http://blobmob.us/"><img src="assets/images/blobmob.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Blob Mob <i>Dec 2016 - NOW</i></h4>
       <p class="tag">HTML, CSS, JS + howler, Git</p>
@@ -58,12 +64,6 @@
       <p class="text_column">Unfinished sequel to Blob Mob with a bigger focus on art and story. You can find a log and current status in the wiki and project pages of the github page.</p>
       <p class="text_footer"><a href="https://github.com/xxzbuckxx/Blob-Mob-Story-Mode">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="http://philome.la/TraczykZack/the-bone-factory"><img src="assets/images/bonefactory.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Bone Factory<i>July 2014</i></h4>
-      <p class="tag"><a href="http://twinery.org/">Twine</a></p>
-      <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
-      <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
-    </div>
     <div class="thumbnail"> <a href="temple.html"><img src="assets/images/J&H.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Jeffery &amp; Hamlet - Temple Explorers<i>April 2019</i></h4>
       <p class="tag">Gamemaker 2</p>
@@ -72,18 +72,6 @@
     </div>
    </div>
    <div class="gallery">
-    <div class="thumbnail"> <a href="Projects/Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
-      <h4>Excel Projects<i>May 2018</i></h4>
-      <p class="tag">Microsoft Excel 2016</p>
-      <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
-      <p class="text_footer"><a href="Projects/Excel/Excel.html">More information</a></p>
-    </div>
-    <div class="thumbnail"> <a href="Projects/Word/Word.html"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Word Projects<i>Apr 2018</i></h4>
-      <p class="tag">Microsoft Word 2016</p>
-      <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
-      <p class="text_footer"><a href="Projects/Word/Word.html">More information</a></p>
-    </div>
     <div class="thumbnail"> <a href="Projects/Java/Java.html"><img src="assets/images/java.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Java Projects<i>Aug 2017 - May 2018</i></h4>
       <p class="tag">Java</p>
@@ -95,6 +83,18 @@
       <p class="tag">HTML, CSS</p>
       <p class="text_column">Here is a test website organized using CSS Grids.</p>
       <p class="text_footer"><a href="">More information</a></p>
+    </div>
+    <div class="thumbnail"> <a href="Projects/Word/Word.html"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Word Projects<i>Apr 2018</i></h4>
+      <p class="tag">Microsoft Word 2016</p>
+      <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
+      <p class="text_footer"><a href="Projects/Word/Word.html">More information</a></p>
+    </div>
+    <div class="thumbnail"> <a href="Projects/Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
+      <h4>Excel Projects<i>May 2018</i></h4>
+      <p class="tag">Microsoft Excel 2016</p>
+      <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
+      <p class="text_footer"><a href="Projects/Excel/Excel.html">More information</a></p>
     </div>
   </div>
   <!-- Footer Section -->
