Best Courses fix title

--- a/Best.html
+++ b/Best.html
@@ -13,7 +13,7 @@
 
 <!-- Main Container -->
 <div id="site"> 
-    <h1 id="title">Most Creative Project.</h1>
+    <h1 id="title">Best Courses.</h1>
     <div class="menu">
         <ul id="menu_container">
             <li class="menu_item"><a href="index.html">Gallery</a></li>
