spell fix (respitory)

--- a/Creative.html
+++ b/Creative.html
@@ -31,7 +31,7 @@
   <!-- Hero Section -->
   <div class="intro">
     <img id="start" src="assets/images/Capture.PNG">
-    <p id="desc">My most creative project was Blob Mob because of its use of music, digital art, and game design. I started development on blobmob on October 13, 2016 (the beginning of my freshman year). I origanlly started making the project in an online html editor while I was experimenting with animations in HTML5's canvas tag. However, as the project grew more complicated I had to start a git respitory and work on my home computer.</p>
+    <p id="desc">My most creative project was Blob Mob because of its use of music, digital art, and game design. I started development on blobmob on October 13, 2016 (the beginning of my freshman year). I origanlly started making the project in an online html editor while I was experimenting with animations in HTML5's canvas tag. However, as the project grew more complicated I had to start a git repository and work on my home computer.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
