--- a/Projects/Java/Java.html
+++ b/Projects/Java/Java.html
@@ -23,8 +23,8 @@
 	</div>
 	<div id="content">
 		<div id="header">
-			<h1>Excel Projects.</h1>
-			<h3><a href="https://www.youracclaim.com/badges/3b8220e3-ec7f-4c58-97ea-fba33d45172c/public_url">Find Certification Here.</a></h3>
+			<h1>Java Projects.</h1>
+			<h3>Made in AP Computer Science Sophmore Year.</h3>
 		</div>
 		<div id="wrapper">
 			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, ---, -- , and ---. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
