spell fixed and orange link hover

--- a/Best.html
+++ b/Best.html
@@ -30,7 +30,7 @@
     <p>Computer Sciences was one of my favorite classes in high school. I took it during sophtmore year 2017-2018 and I learned a lot about coding in Java. At this time I already had been programming in javascript for a few years which made it confusing learing some of the slighty different subtlties of Java; however, I feel like this made me a better coder and learner by the end of the year.</p>
     
     <h1>Computer Applications</h1>
-    <p>Although I only took this class to get my keyboarding credit, I was delightfully suprsided by the magnitude of things I actually learned in this class. From Word and Excel certifications to resumes and the online portfolio you are reading right now I learned a variety of important real life skills in this class.</p>
+    <p>Although I only took this class to get my keyboarding credit, I was delightfully surprised by the magnitude of things I actually learned in this class. From Word and Excel certifications to resumes and the online portfolio you are reading right now I learned a variety of important real life skills in this class.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
