--- a/Projects/Java/Java.html
+++ b/Projects/Java/Java.html
@@ -27,18 +27,7 @@
 			<h3>Made in AP Computer Science Sophmore Year.</h3>
 		</div>
 		<div id="wrapper">
-			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, ---, -- , and ---. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
-            <div id="examples">
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
-                </a></div>
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
-                </a></div>
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
-                </a></div>
-            </div>
+			<p>In AP Computer Science I learned to write object-oriented programs using the Java language to solve a variety of problems using common algorithms and data structures. Some of the projects included making manipulating images, creating a chatbot, and replicating a card game called the Game of Nim.</p>
 		</div>
 	</div>
 </body>
