itch.io link added for spacequest

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img id="icon" src="assets/images/LogoBig.jpg"/>
       <p>Hello. I’m a coding enthusiast and design hobbyist. I’m currently a student at Oak Park River Forest High School where I enjoy playing soccer and attending Graphic Design Club. I also enjoy making video games with Game Maker 2, RPG Maker, twine, and Javascript.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
-      <p><b ><a href="https://xxzbuckxx.github.io/gm2-platformer/">(P.S. I am making a game called Space Quest right now)</a></b></p>
+      <p><b ><a href="https://xxzbuckxx.itch.io/ralphs-space-quest-demo?secret=Y3bwCfk06dRn0Ktfsr78PjlMYE">(P.S. I am making a game called Space Quest right now)</a></b></p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
